--- a/src/site/search-index.njk
+++ b/src/site/search-index.njk
@@ -2,14 +2,23 @@
 permalink: /searchIndex.json
 eleventyExcludeFromCollections: true
 ---
-[{% for post in collections.note %}
+[
+{%- for post in collections.note -%}
 {
-    "title": {% if post.data.title %}{{post.data.title | jsonify | safe }}{% else %}{{post.fileSlug | jsonify | safe }}{% endif %},
-    "date": "{{ post.date | date: "%Y-%m-%d" }}",
+    "title": {% if post.data.title %}{{ post.data.title | jsonify | safe }}{% else %}{{ post.fileSlug | jsonify | safe }}{% endif %},
+    "date": "{{ post.date }}",
     "url": "{{ post.url }}",
-    "author": "{% if post.data.author %}{{ post.data.author }}{% else %}CGFan{% endif %}",
-    "cover": "{% if post.data.cover %}{{ post.data.cover }}{% endif %}",
-    "content": {{ post.templateContent | striptags(true) | link | jsonify | safe  }},
-    "tags": [{{post.templateContent | link | searchableTags | safe }} {% if post.data.tags %}{% for tag in post.data.tags %}"{{tag|validJson}}"{% if not loop.last %},{% endif %}{% endfor %}{% endif %}]
+    "author": "{{ post.data.author if post.data.author else 'CGFan' }}",
+    "cover": "{{ post.data.cover if post.data.cover else '' }}",
+    "content": {{ post.templateContent | striptags(true) | link | jsonify | safe }},
+    "tags": [
+        {{ post.templateContent | link | searchableTags | safe }}
+        {%- if post.data.tags -%}
+            {%- for tag in post.data.tags -%}
+               , "{{ tag | validJson }}"
+            {%- endfor -%}
+        {%- endif -%}
+    ]
 }{% if not loop.last %},{% endif %}
-{% endfor %}]
+{%- endfor -%}
+]
