--- a/src/site/search-index.njk
+++ b/src/site/search-index.njk
@@ -4,21 +4,24 @@ eleventyExcludeFromCollections: true
 ---
 [
 {%- for post in collections.note -%}
-{
-    "title": {% if post.data.title %}{{ post.data.title | jsonify | safe }}{% else %}{{ post.fileSlug | jsonify | safe }}{% endif %},
-    "date": "{{ post.date }}",
-    "url": "{{ post.url }}",
-    "author": {% if post.data.author %}{{ post.data.author | jsonify | safe }}{% else %}"CGFan"{% endif %},
-    "cover": {% if post.data.cover %}{{ post.data.cover | jsonify | safe }}{% else %}""{% endif %},
-    "content": {{ post.templateContent | striptags(true) | link | jsonify | safe }},
-    "tags": [
-        {{ post.templateContent | link | searchableTags | safe }}
-        {%- if post.data.tags -%}
-           {%- for tag in post.data.tags -%}
-             , "{{ tag | replace('"', '\\"') }}"
-           {%- endfor -%}
-        {%- endif -%}
-    ]
-}{% if not loop.last %},{% endif %}
+  {# 核心修复：排除 标签页、首页 和 包含 'searchIndex' 的页面 #}
+  {%- if post.url != '/tag/' and post.url != '/' and 'searchIndex' not in post.url -%}
+  {
+      "title": {% if post.data.title %}{{ post.data.title | jsonify | safe }}{% else %}{{ post.fileSlug | jsonify | safe }}{% endif %},
+      "date": "{{ post.date | date('yyyy-MM-dd') }}",
+      "url": "{{ post.url }}",
+      "author": {% if post.data.author %}{{ post.data.author | jsonify | safe }}{% else %}"CGFan"{% endif %},
+      "cover": {% if post.data.cover %}{{ post.data.cover | jsonify | safe }}{% else %}""{% endif %},
+      "content": {{ post.templateContent | striptags(true) | link | jsonify | safe }},
+      "tags": [
+          {{ post.templateContent | link | searchableTags | safe }}
+          {%- if post.data.tags -%}
+             {%- for tag in post.data.tags -%}
+               , "{{ tag | replace('"', '\\"') }}"
+             {%- endfor -%}
+          {%- endif -%}
+      ]
+  }{% if not loop.last %},{% endif %}
+  {%- endif -%}
 {%- endfor -%}
 ]
